# Simple-LISP-Compiler

./: .gitignore  CMakeLists.txt  README.md  Simple LISP Compiler.cpp  Simple LISP Compiler.h  run_tests.sh  sLISPcomp.h
examples/: factorial.slisp  fibonacci.slisp  hello.slisp  lambda.slisp
src/: interpreter.cpp  lexer.cpp  lexer_wrapper.cpp  main.cpp  parser.y  semantic_analyzer.cpp  token.cpp
src/include/: ast.h  interpreter.h  lexer.h  lexer_wrapper.h  parser_interface.h  sLISPcomp.h  semantic_analyzer.h  token.h
tests/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
