cmake_minimum_required(VERSION 3.8)

# Enable hot reload for MSVC compilers if supported
if (POLICY CMP0141)
    cmake_policy(SET CMP0141 NEW)
    set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project("Simple-LISP-Compiler"
        VERSION 0.1.0
        DESCRIPTION "A simple LISP compiler"
        LANGUAGES CXX)

# Find bison executable
find_program(BISON_EXECUTABLE bison)
if (NOT BISON_EXECUTABLE)
  message(FATAL_ERROR "bison not found. Install bison or set BISON_EXECUTABLE to the path of bison.")
else()
  message(STATUS "Found Bison: ${BISON_EXECUTABLE}")
endif()

set(PARSER_Y ${CMAKE_CURRENT_SOURCE_DIR}/src/parser.y)
set(GENERATED_PARSER_C ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.c)
set(GENERATED_PARSER_H ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.h)

# Generate parser.tab.c and parser.tab.h from parser.y
add_custom_command(
  OUTPUT ${GENERATED_PARSER_C} ${GENERATED_PARSER_H}
  COMMAND ${BISON_EXECUTABLE} -d -o ${GENERATED_PARSER_C} ${PARSER_Y}
  DEPENDS ${PARSER_Y}
  COMMENT "Generating parser from ${PARSER_Y} with bison"
  VERBATIM
)

# Custom target that depends on the generated outputs
add_custom_target(generate_parser
  DEPENDS ${GENERATED_PARSER_C} ${GENERATED_PARSER_H}
)

# Collect all source files (C++ sources)
file(GLOB_RECURSE SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

# Append the generated parser C source to the list of sources so it is compiled
list(APPEND SOURCES ${GENERATED_PARSER_C})

# Set include directories (project headers + generated headers)
include_directories(
    "${CMAKE_CURRENT_SOURCE_DIR}/src/include"
    "${CMAKE_CURRENT_BINARY_DIR}"  # to find parser.tab.h generated by bison
)

# Create the executable
add_executable(slisp ${SOURCES})

# Ensure the executable target depends on the custom generator target (so parser is generated first)
# NOTE: add_dependencies must reference the actual name of the custom target we created above
add_dependencies(slisp generate_parser)

# Set C++ standard
set_target_properties(slisp PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

# Set output directory
set_target_properties(slisp PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

# Installation instructions
install(TARGETS slisp
        RUNTIME DESTINATION bin)

# Copy test files to the binary directory for easy access during testing
file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/tests/"
     DESTINATION "${CMAKE_BINARY_DIR}/bin/tests")
