cmake_minimum_required(VERSION 3.10)

if (POLICY CMP0141)
    cmake_policy(SET CMP0141 NEW)
    # single string argument: generator-expression chooses debug format for MSVC
    set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT
        "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project("Simple-LISP-Compiler"
        VERSION 0.1.0
        DESCRIPTION "A simple LISP compiler"
        LANGUAGES CXX)

if(APPLE)
    execute_process(COMMAND xcrun --show-sdk-path OUTPUT_VARIABLE MACOS_SDK_PATH OUTPUT_STRIP_TRAILING_WHITESPACE)
    set(CMAKE_OSX_SYSROOT ${MACOS_SDK_PATH})
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_program(BISON_EXECUTABLE bison)
if (NOT BISON_EXECUTABLE)
    message(FATAL_ERROR
    "bison not found. Install bison or set BISON_EXECUTABLE to the path of "
    "bison.")
else()
    message(STATUS "Found Bison: ${BISON_EXECUTABLE}")
endif()

set(PARSER_Y ${CMAKE_CURRENT_SOURCE_DIR}/src/parser.y)
set(GENERATED_PARSER_C ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.c)
set(GENERATED_PARSER_CPP ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.cpp)
set(GENERATED_PARSER_H ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.h)

add_custom_command(
  OUTPUT ${GENERATED_PARSER_CPP} ${GENERATED_PARSER_H}
  COMMAND ${BISON_EXECUTABLE} -d -o ${GENERATED_PARSER_C} ${PARSER_Y}
  COMMAND ${CMAKE_COMMAND} -E copy ${GENERATED_PARSER_C} ${GENERATED_PARSER_CPP}
  DEPENDS ${PARSER_Y}
  COMMENT "Generating parser from ${PARSER_Y} with bison and converting to C++"
  VERBATIM
)

add_custom_target(generate_parser
  DEPENDS ${GENERATED_PARSER_CPP} ${GENERATED_PARSER_H}
)

file(GLOB_RECURSE SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

list(APPEND SOURCES ${GENERATED_PARSER_CPP})



include_directories(
    "${CMAKE_CURRENT_SOURCE_DIR}/src/include"
    "${CMAKE_CURRENT_BINARY_DIR}"  # to find parser.tab.h generated by bison
)

add_executable(slisp ${SOURCES})

add_dependencies(slisp generate_parser)

set_target_properties(slisp PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

set_target_properties(slisp PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

install(TARGETS slisp
        RUNTIME DESTINATION bin)

file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/tests/"
     DESTINATION "${CMAKE_BINARY_DIR}/bin/tests")
